--- a/leso.html
+++ b/leso.html
@@ -25,7 +25,7 @@
                         </ul>
                     </li>
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="connection/inscription">connection/inscription</a></li>
+                    <li><a id="openLinkButton" href="page d'inscription/connection.html">connection/inscription</a></li>
                 </ul>
             </nav>
         </div>
@@ -64,11 +64,6 @@
                 <h2>Contenu de l'Onglet 4</h2>
                 <p>Ceci est le contenu de l'onglet 4.</p>
             </div>
-            <div id="connection/inscription" class="tab">
-                <h2>Contenu de l'Onglet 5</h2>
-                <p>Ceci est le contenu de l'onglet 5.</p>
-            </div>
-
         </div>
     </main>
 
