--- a/page principal/leso.html
+++ b/page principal/leso.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GreenEng</title>
     <link rel="stylesheet" href="leso.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -15,17 +16,9 @@
         <div>
             <nav>
                 <ul class="topnavheader">
-                    <li><a href="#">poprietés</a></li>
-                    <li>
-                        <a >blog/actualiter</a>
-                        <ul class="dropdown">
-                            <li><a href="#">conseil</a></li>
-                            <li><a href="#">mise a jour du marcher</a></li>
-                            <li><a href="#">opportunite</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a id="openLinkButton" href="page d'inscription/connection.html">connection/inscription</a></li>
+                    <li><a href="#"><i class="fa-solid fa-blog"></i>Blogs</a></li>
+                    <li><a href="#"><i class="fa-solid fa-question"></i>FAQ</a></li>
+                    <li><a id="openLinkButton" href="page d'inscription/connection.html"><i class="fa-solid fa-user"></i>Connection/Inscription</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,17 +28,18 @@
 
             <button type="submit">🔍</button>
     </header>
+<div>
 <nav class="tabs">
     <ul class="topnav">
-        <li><a href="#accueil" class="active">Accueil</a></li>
+        <li><a href="#accueil" class="active"><i class="fa-solid fa-house"></i>Accueil</a></li>
             <li>
-                <a href="#Apropos">À propos</a>
+                <a href="#Apropos"><i class="fa-solid fa-users"></i>Nos Valeurs & Engagements</a>
             </li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#services"><i class="fa-solid fa-gear"></i>Services</a></li>
+            <li><a href="#contact"><i class="fa-solid fa-envelope"></i>Contact</a></li>
         </ul>
     </nav>
-    
+</div> 
     <main>
         <div class="tab-content">
             <div id="accueil" class="tab active">
