--- a/page principal/page d'inscription/connection.html
+++ b/page principal/page d'inscription/connection.html
@@ -5,22 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
     <link rel="stylesheet" href="connection.css">
+    <script src="https://kit.fontawesome.com/a062f8f6cd.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
+    <section>
+       <div class="logo">
+        <img src="green eng.png">
         <h1>Connexion</h1>
-        <form id="signinForm">
-            <label for="username">Nom d'utilisateur :</label>
-            <input type="text" id="username" name="username" required>
-
-            <label for="password">Mot de passe :</label>
-            <input type="password" id="password" name="password" required>
-
-            <button type="submit">Se connecter</button>
-        </form>
-        <p>Pas encore de compte ? <a href="inscription.html">Inscrivez-vous ici</a></p>
     </div>
-
+         <div class="input-box">
+             <input type="text" placeholder="Nom d'utilisateur">
+             <i class="fa-solid fa-user"></i>
+         </div>
+        <div class="input-box">
+            <input type="password" placeholder="Mot de passe">
+            <i class="fa-solid fa-lock"></i>
+        </div>
+        <div class="remenber-forget">
+            <label><input type="checkbox">se souvenir de moi</label>
+            <a href="#">Mot de passe oublier ?</a>
+        </div>
+        <button class="login-btn"> se connecter</button>
+        <div class="register-link">
+            <p>pas de compte ?</p><a href="inscription.html">inscription</a>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
